# tau-supersymmetry

./: .gitignore  Makefile  README.md  dvc.yaml  feature_engineer.py  makefile  preprocess.py  pyproject.toml  train.py  train_bdt.py  train_dnn.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: default.yaml
configs/features/: cc.yaml  default.yaml  ml.yaml  ntuples.yaml
configs/merge/: default.yaml
configs/model/: dnn.yaml  xgboost.yaml
configs/paths/: default.yaml
configs/pipeline/: default.yaml
configs/regions/: cr_multijet.yaml  cr_top_fake_tau.yaml  cr_top_kinematic.yaml  cr_top_true_tau.yaml  cr_wtautau_fake_tau.yaml  cr_wtautau_kinematic.yaml  cr_wtautau_true_tau.yaml  cr_znunu.yaml  cr_ztautau.yaml  preselection_ch0.yaml  preselection_ch1.yaml  preselection_ch12.yaml  preselection_ch2.yaml  sr_ch1_compressed.yaml  sr_ch1_medium_mass.yaml  sr_ch2_compressed.yaml  sr_ch2_high_mass.yaml  sr_ch2_multibin.yaml  vr_ch1_compressed_etmiss.yaml  vr_ch1_compressed_mttau.yaml  vr_ch1_medium_mass_etmiss.yaml  vr_ch1_medium_mass_ht.yaml  vr_ch1_medium_mass_mttau.yaml  vr_ch2_top.yaml  vr_ch2_wtautau.yaml  vr_ch2_ztautau.yaml
notebooks/: 00_overview.ipynb  01_preprocessing.ipynb  02_feature_engineering.ipynb  03_eda.ipynb  04_hyperparameter_tuning.ipynb  04a_bdt.ipynb  04a_bdt_training.ipynb  04b_dnn_training.ipynb  05a_bdt_training.ipynb  06a_bdt_evaluation.ipynb
src/: utils.py
tests/: conftest.py  test_analysis.py  test_config.py  test_features.py  test_io.py  test_merger.py  test_processor.py  test_rectangularizer.py  test_serving.py
(+18 files in other folders)
