[project]
name = "tau-supersymmetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atlas-mpl-style>=0.25.0",
    "awkward>=2.9.0",
    "fastapi>=0.115.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numba>=0.60",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyhf>=0.7.0",
    "pyrootutils>=1.0.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "uproot>=5.7.1",
    "uvicorn[standard]>=0.34.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "dvc>=3.56.0",
    "httpx>=0.28.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.ruff]
extend-exclude = ["notebooks/*.ipynb"]
